TFP-6967: Legg til nynorsk og engelsk i Dialogporten-tekster
Dialogportens ContentValue-kontrakt støtter allerede flerspråklig
innhold (liste av ContentValueItem med languageCode), men vi har kun
noensinne fylt ut bokmål (nb). Denne endringen legger til nynorsk (nn)
og engelsk (en) for alle tekster som sendes til Dialogporten for
inntektsmelding.

- Ny type FlerspråkligTekst(nb, nn, en) i integrasjoner.altinn, kun
  brukt for Dialogporten-tekster.
- DialogportenRequestMapper bygger nå ContentValue med tre
  ContentValueItem (nb/nn/en) for alle tekstfelt, inkl. sakstittel,
  summary, transmission-innhold, attachment-navn, purring, avvist- og
  utgått-tekster.
- ForespørselTekster har fått flerspråklige varianter av sakstittel
  og purringtekst (lagSaksTittelFlerspråklig,
  lagBeskjedFraSaksbehandlerTekstFlerspråklig samt
  lagAvvistInntektTekstFlerspråklig), mens eksisterende nb-only
  metoder beholdes uendret til bruk for MinSideArbeidsgiverTjeneste
  (utenfor scope for denne endringen).
- DialogportenKlient/DialogportenTjeneste/
  DialogportenForvaltningRestTjeneste oppdatert til å bruke
  FlerspråkligTekst der teksten går til Dialogporten.
- Oppdaterte tester i DialogportenRequestMapperTest og
  DialogportenTjenesteTest.

Endringen er 100% intern i fp-inntektsmelding (DialogportenRequest er
ikke en del av kontrakter/), ingen påvirkning på fp-sak,
fp-inntektsmelding-api eller fp-inntektsmelding-frontend.

Merknad: nn/en-oversettelsene er utkast skrevet av meg og bør
kvalitetssikres av tekstforfatter/klarspråk-ressurs før dette går til
produksjon, siden det er brukervendt innhold på Min side – arbeidsgiver.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>